--- a/pyda-3new.ipynb
+++ b/pyda-3new.ipynb
@@ -70,8 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -156,9 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {
-    "scrolled": true
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [
     {
@@ -166,7 +172,16 @@
      "output_type": "stream",
      "text": [
       "8.433333333333334\n",
-      "9.166666666666666\n"
+      "9.166666666666666\n",
+      "8.36\n",
+      "8.8\n",
+      "8.8\n",
+      "9.2\n",
+      "9.0\n",
+      "9.0\n",
+      "10.0\n",
+      "8.2\n",
+      "8.48\n"
      ]
     }
    ],
@@ -190,6 +205,8 @@
     "    average_homework = sum(all_homework) / len(all_homework)\n",
     "    return average_homework\n",
     "\n",
+    "print(average_homework_result())\n",
+    "\n",
     "def average_exam_result():\n",
     "    all_exams = []\n",
     "    for all_data in students_list:\n",
@@ -197,8 +214,129 @@
     "            if k == \"exam\":\n",
     "                all_exams.append(v)\n",
     "    average_exam = sum(all_exams) / len(all_exams)\n",
-    "    return average_exam"
+    "    return average_exam\n",
+    "\n",
+    "print(average_exam_result())\n",
+    "\n",
+    "\n",
+    "def average_homework_sex_female_result():\n",
+    "    all_homework_sex_female = []\n",
+    "    for all_data in students_list:\n",
+    "            for k,v in all_data.items():\n",
+    "                if k == 'sex' and v == 'ж':\n",
+    "                    for all_girls in all_data.items():\n",
+    "                        for b,j in all_data.items():\n",
+    "                            if b == \"grade\":\n",
+    "                                all_homework_sex_female += j\n",
+    "                    average_homework_sex_female = sum(all_homework_sex_female) / len(all_homework_sex_female)\n",
+    "    return average_homework_sex_female\n",
+    "\n",
+    "print(average_homework_sex_female_result())\n",
+    "\n",
+    "all_homework_sex_male = []\n",
+    "for all_data in students_list:\n",
+    "        for k,v in all_data.items():\n",
+    "            if k == 'sex' and v == 'м':\n",
+    "                for all_boys in all_data.items():\n",
+    "                    for b,j in all_data.items():\n",
+    "                        if b == \"grade\":\n",
+    "                            all_homework_sex_male += j\n",
+    "                average_homework_sex_male = sum(all_homework_sex_male) / len(all_homework_sex_male)\n",
+    "print(average_homework_sex_male) \n",
+    "\n",
+    "def all_homework_sex_male_result():\n",
+    "    all_homework_sex_male = []\n",
+    "    for all_data in students_list:\n",
+    "            for k,v in all_data.items():\n",
+    "                if k == 'sex' and v == 'м':\n",
+    "                    for all_boys in all_data.items():\n",
+    "                        for b,j in all_data.items():\n",
+    "                            if b == \"grade\":\n",
+    "                                all_homework_sex_male += j\n",
+    "                    average_homework_sex_male = sum(all_homework_sex_male) / len(all_homework_sex_male)\n",
+    "    return average_homework_sex_male\n",
+    "print(all_homework_sex_male_result()) \n",
+    "\n",
+    "all_exams_sex_female = []\n",
+    "for all_data in students_list:\n",
+    "        for k,v in all_data.items():\n",
+    "            if k == 'sex' and v == 'ж':\n",
+    "                for all_girls in all_data.items():\n",
+    "                    for b,j in all_data.items():\n",
+    "                        if b == \"exam\":\n",
+    "                            all_exams_sex_female.append(j)\n",
+    "                average_exam_sex_female = sum(all_exams_sex_female) / len(all_exams_sex_female)\n",
+    "print(average_exam_sex_female)\n",
+    "\n",
+    "all_exams_sex_male = []\n",
+    "for all_data in students_list:\n",
+    "        for k,v in all_data.items():\n",
+    "            if k == 'sex' and v == 'м':\n",
+    "                for all_girls in all_data.items():\n",
+    "                    for b,j in all_data.items():\n",
+    "                        if b == \"exam\":\n",
+    "                            all_exams_sex_male.append(j)\n",
+    "                average_exam_sex_male = sum(all_exams_sex_male) / len(all_exams_sex_male)\n",
+    "print(average_exam_sex_male)\n",
+    "\n",
+    "all_exams_experienced = []\n",
+    "for all_data in students_list:\n",
+    "        for k,v in all_data.items():\n",
+    "            if k == 'program_exp' and v == True:\n",
+    "                for all_experienced in all_data.items():\n",
+    "                    for b,j in all_data.items():\n",
+    "                        if b == \"exam\":\n",
+    "                            all_exams_experienced.append(j)\n",
+    "                average_exam_experienced = sum(all_exams_experienced) / len(all_exams_experienced)\n",
+    "print(average_exam_experienced)\n",
+    "\n",
+    "all_exams_unexperienced = []\n",
+    "for all_data in students_list:\n",
+    "        for k,v in all_data.items():\n",
+    "            if k == 'program_exp' and v == False:\n",
+    "                for all_unexperienced in all_data.items():\n",
+    "                    for b,j in all_data.items():\n",
+    "                        if b == \"exam\":\n",
+    "                            all_exams_unexperienced.append(j)\n",
+    "                average_exam_unexperienced = sum(all_exams_unexperienced) / len(all_exams_unexperienced)\n",
+    "print(average_exam_unexperienced)\n",
+    "\n",
+    "all_homework_unexperienced = []\n",
+    "for all_data in students_list:\n",
+    "        for k,v in all_data.items():\n",
+    "            if k == 'program_exp' and v == False:\n",
+    "                for all_unexperienced in all_data.items():\n",
+    "                    for b,j in all_data.items():\n",
+    "                        if b == \"grade\":\n",
+    "                            all_homework_unexperienced += j\n",
+    "                average_homework_unexperienced = sum(all_homework_unexperienced) / len(all_homework_unexperienced)\n",
+    "print(average_homework_unexperienced) \n",
+    "\n",
+    "all_homework_experienced = []\n",
+    "for all_data in students_list:\n",
+    "        for k,v in all_data.items():\n",
+    "            if k == 'program_exp' and v == True:\n",
+    "                for all_experienced in all_data.items():\n",
+    "                    for b,j in all_data.items():\n",
+    "                        if b == \"grade\":\n",
+    "                            all_homework_experienced += j\n",
+    "                average_homework_experienced = sum(all_homework_experienced) / len(all_homework_experienced)\n",
+    "print(average_homework_experienced) \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
