--- a/pyda-3new.ipynb
+++ b/pyda-3new.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -199,14 +199,10 @@
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "Выберите вариант:  1 - вывести на экран среднюю оценку за все ДЗ по группе и вывести на экран среднюю оценку за экзамен по группе; 2 - вывести среднюю оценку за ДЗ и за экзамен по группе в разрезе пола студентов 3 - вывести среднюю оценку за ДЗ и за экзамен в разрезе наличия опыта в программировании у студентов3\n",
-      "Cредняя оценка за экзамен группе для опытных 9.0\n",
-      "Cредняя оценка за экзамен по группе для неопытных 10.0\n",
-      "Cредняя оценка за все ДЗ по группе для неопытных 8.2\n",
-      "Cредняя оценка за все ДЗ по группе для опытных 8.8\n"
-     ]
+      "Cредняя оценка за все ДЗ по группе для девочек 8.36\nCредняя оценка за все ДЗ по группе для мальчиков 8.8\nCредняя оценка за экзамен по группе для девочек 8.0\nCредняя оценка за экзамен по группе для мальчиков 9.0\n"
+     ],
+     "output_type": "stream"
     }
    ],
    "source": [
@@ -346,23 +342,27 @@
     "                    return average_homework_experienced\n",
     "                \n",
     "                \n",
-    "a = input('Выберите вариант:  1 - вывести на экран среднюю оценку за все ДЗ по группе и вывести на экран среднюю оценку за экзамен по группе; 2 - вывести среднюю оценку за ДЗ и за экзамен по группе в разрезе пола студентов 3 - вывести среднюю оценку за ДЗ и за экзамен в разрезе наличия опыта в программировании у студентов')\n",
     "\n",
-    "if a=='1':\n",
-    "    print('Cредняя оценка за все ДЗ по группе', average_homework_result())\n",
-    "    print('Cредняя оценка за экзамен по группе', average_exam_result())\n",
-    "elif a=='2':\n",
-    "    print('Cредняя оценка за все ДЗ по группе для девочек', average_homework_sex_female_result())\n",
-    "    print('Cредняя оценка за все ДЗ по группе для мальчиков', average_homework_sex_male_result())\n",
-    "    print('Cредняя оценка за экзамен по группе для девочек', average_exam_sex_female_result())\n",
-    "    print('Cредняя оценка за экзамен по группе для мальчиков', average_exam_sex_male_result())\n",
-    "elif a=='3':\n",
-    "    print('Cредняя оценка за экзамен группе для опытных', average_exam_experienced_result())\n",
-    "    print('Cредняя оценка за экзамен по группе для неопытных', average_exam_unexperienced_result())\n",
-    "    print('Cредняя оценка за все ДЗ по группе для неопытных', average_homework_unexperienced_result())\n",
-    "    print('Cредняя оценка за все ДЗ по группе для опытных', average_homework_experienced_result())\n",
-    "else:\n",
-    "    print ('Введите число 1,2,3')\n",
+    "def interact():\n",
+    "    a = input('Выберите вариант:  1 - вывести на экран среднюю оценку за все ДЗ по группе и вывести на экран среднюю оценку за экзамен по группе; 2 - вывести среднюю оценку за ДЗ и за экзамен по группе в разрезе пола студентов 3 - вывести среднюю оценку за ДЗ и за экзамен в разрезе наличия опыта в программировании у студентов')\n",
+    "\n",
+    "    if a=='1':\n",
+    "        print('Cредняя оценка за все ДЗ по группе', average_homework_result())\n",
+    "        print('Cредняя оценка за экзамен по группе', average_exam_result())\n",
+    "    elif a=='2':\n",
+    "        print('Cредняя оценка за все ДЗ по группе для девочек', average_homework_sex_female_result())\n",
+    "        print('Cредняя оценка за все ДЗ по группе для мальчиков', average_homework_sex_male_result())\n",
+    "        print('Cредняя оценка за экзамен по группе для девочек', average_exam_sex_female_result())\n",
+    "        print('Cредняя оценка за экзамен по группе для мальчиков', average_exam_sex_male_result())\n",
+    "    elif a=='3':\n",
+    "        print('Cредняя оценка за экзамен группе для опытных', average_exam_experienced_result())\n",
+    "        print('Cредняя оценка за экзамен по группе для неопытных', average_exam_unexperienced_result())\n",
+    "        print('Cредняя оценка за все ДЗ по группе для неопытных', average_homework_unexperienced_result())\n",
+    "        print('Cредняя оценка за все ДЗ по группе для опытных', average_homework_experienced_result())\n",
+    "    else:\n",
+    "        print ('Введите число 1,2,3')\n",
+    "    \n",
+    "interact()\n",
     "\n"
    ]
   },
@@ -405,6 +405,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
