--- a/bashevoy_molodets.ipynb
+++ b/bashevoy_molodets.ipynb
@@ -12,10 +12,12 @@
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "value1111\nvalue222\nJohn 3\n"
-     ],
-     "output_type": "stream"
+      "value1111\n",
+      "value222\n",
+      "John 3\n"
+     ]
     }
    ],
    "source": [
@@ -42,36 +44,82 @@
     "a = Employee('John', 3)\n",
     "print(a.name, a.seniority)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "stats = [\n",
+    "    {\n",
+    "        'movie': 'На странных берегах',\n",
+    "        'bodycount': {'люди': 56, 'русалки': 2, 'ядовитые жабы': 3, 'пираты-зомби': 2}\n",
+    "    },\n",
+    "    {\n",
+    "        'movie': 'На краю света',\n",
+    "        'bodycount': {'люди': 88}\n",
+    "    },\n",
+    "    {\n",
+    "        'movie': 'Сундук мертвеца',\n",
+    "        'bodycount': {'люди': 56, 'крабы отшельники': 1}\n",
+    "    },\n",
+    "    {\n",
+    "        'movie': 'Проклятие Черной жемчужины',\n",
+    "        'bodycount': {'люди': 17}\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "all_people = []\n",
+    "for record in stats:\n",
+    "    for k,v in record.items():\n",
+    "        if k == 'bodycount':\n",
+    "            for z,b in v.items():\n",
+    "                if z =='люди':\n",
+    "                    all_people.append(b)\n",
+    "print(sum(all_people)/len(all_people))\n",
+    "\n",
+    "            \n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  },
-  "kernelspec": {
-   "name": "python3",
-   "language": "python",
-   "display_name": "Python 3"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
