--- a/bashevoy_osnovi_pandas6.ipynb
+++ b/bashevoy_osnovi_pandas6.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -30,9 +30,12 @@
     }
    ],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
-    "data = pd.read_csv('C:\\\\Users\\\\finan\\\\PycharmProjects\\\\pyda-1\\\\ml-latest-small\\\\ratings.csv')\n",
-    "data_movies = pd.read_csv('C:\\\\Users\\\\finan\\\\PycharmProjects\\\\pyda-1\\\\ml-latest-small\\\\movies.csv')\n",
+    "path = os.path.abspath('')\n",
+    "data_path = os.path.join(path, 'ml-latest-small')\n",
+    "data = pd.read_csv(os.path.join(data_path, 'ratings.csv'))\n",
+    "data_movies = pd.read_csv(os.path.join(data_path, 'movies.csv'))\n",
     "data_all = data.merge(data_movies )\n",
     "data_all[['movieId', 'rating', 'title']].head()\n",
     "# data_all[].unique().head()\n",
