--- a/bashevoy_osnovi_pandas6.ipynb
+++ b/bashevoy_osnovi_pandas6.ipynb
@@ -60,21 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "outputs": [
     {
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-eb63f598a6e0>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    data_baltic = data_baltic[ (data_baltic['country']=='Lithuania') | (data_baltic['country']=='Latvia') | (data_baltic['country']=='Estonia') , inplace=True]\u001b[0m\n\u001b[1;37m                                                                                                                                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "text": [
+      "118111115.66603443\n"
      ],
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-eb63f598a6e0>, line 3)",
-     "output_type": "error"
+     "output_type": "stream"
     }
    ],
    "source": [
     "import pandas as pd\n",
     "data_baltic = pd.read_csv('C:\\\\Users\\\\finan\\\\PycharmProjects\\\\pyda-1\\\\power.csv')\n",
-    "data_baltic = data_baltic[ (data_baltic['country']=='Lithuania') | (data_baltic['country']=='Latvia')\n",
+    "data_baltic = data_baltic[ (data_baltic['country']=='Lithuania') | (data_baltic['country']=='Latvia') \\\n",
     "                           | (data_baltic['country']=='Estonia')]\n",
     "data_baltic = data_baltic[ (data_baltic['year'] >= 2005) | (data_baltic['year'] <= 2010)]\n",
     "data_baltic = data_baltic[ (data_baltic['quantity'] >= 0) ]\n",
