--- a/bashevoy_osnovi_pandas6.ipynb
+++ b/bashevoy_osnovi_pandas6.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -78,7 +78,10 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data_baltic = pd.read_csv('C:\\\\Users\\\\finan\\\\PycharmProjects\\\\pyda-1\\\\power.csv')\n",
+    "import os\n",
+    "path = os.path.abspath('')\n",
+    "data_path = os.path.join(path, 'ml-latest-small')\n",
+    "data_baltic = pd.read_csv(os.path.join(data_path, 'power.csv'))\n",
     "data_baltic = data_baltic[ (data_baltic['country']=='Lithuania') | (data_baltic['country']=='Latvia') \\\n",
     "                           | (data_baltic['country']=='Estonia')]\n",
     "data_baltic = data_baltic[ (data_baltic['year'] >= 2005) | (data_baltic['year'] <= 2010)]\n",
@@ -102,8 +105,8 @@
     "-----------\n",
     "\n",
     "Выберите страницу любого сайта с табличными данными. Импортируйте таблицы в pandas dataframe.\n",
-    "Примеры страниц (необязательно брать именно эти):\n",
-    "https://fortrader.org/quotes\n",
+    "Примеры страниц (необязательно брать именно эти):  \n",
+    "https://fortrader.org/quotes  \n",
     "https://www.finanz.ru/valyuty/v-realnom-vremeni"
    ],
    "metadata": {
@@ -112,23 +115,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "                               Type    Last   Chg.  Chg.%  Time\n0  Нефть (BRENT) Курс нефти сегодня  58.590  0.050  0.090   NaN\n1   Нефть (WTI) Цены на нефть (WTI)  53.930  0.040  0.070   NaN\n2          Сахар котировки на сахар  12.630  0.000  0.000   NaN\n3                   Газ Цена на газ   2.159  0.001  0.046   NaN",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Type</th>\n      <th>Last</th>\n      <th>Chg.</th>\n      <th>Chg.%</th>\n      <th>Time</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Нефть (BRENT) Курс нефти сегодня</td>\n      <td>58.590</td>\n      <td>0.050</td>\n      <td>0.090</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Нефть (WTI) Цены на нефть (WTI)</td>\n      <td>53.930</td>\n      <td>0.040</td>\n      <td>0.070</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Сахар котировки на сахар</td>\n      <td>12.630</td>\n      <td>0.000</td>\n      <td>0.000</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Газ Цена на газ</td>\n      <td>2.159</td>\n      <td>0.001</td>\n      <td>0.046</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                               Type    Last   Chg.  Chg.%\n0  Нефть (BRENT) Курс нефти сегодня  58.540  0.000  0.000\n1   Нефть (WTI) Цены на нефть (WTI)  53.890  0.000  0.000\n2          Сахар котировки на сахар  12.630  0.000  0.000\n3                   Газ Цена на газ   2.167  0.009  0.417",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Type</th>\n      <th>Last</th>\n      <th>Chg.</th>\n      <th>Chg.%</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Нефть (BRENT) Курс нефти сегодня</td>\n      <td>58.540</td>\n      <td>0.000</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Нефть (WTI) Цены на нефть (WTI)</td>\n      <td>53.890</td>\n      <td>0.000</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Сахар котировки на сахар</td>\n      <td>12.630</td>\n      <td>0.000</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Газ Цена на газ</td>\n      <td>2.167</td>\n      <td>0.009</td>\n      <td>0.417</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 3
+     "execution_count": 7
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "table = pd.read_html(\"https://fortrader.org/quotes\")\n",
-    "table[0].head()\n",
-    "\n"
+    "import io\n",
+    "import requests\n",
+    "\n",
+    "page = requests.get(\"https://fortrader.org/quotes\")\n",
+    "table = pd.read_html(io.StringIO(page.content.decode('UTF-8')), flavor=['lxml'])\n",
+    "tbl = table[0]\n",
+    "tbl.drop(columns=['Time'], inplace=True)\n",
+    "tbl.head()\n"
    ],
    "metadata": {
     "collapsed": false,
