Explictly set merge by movieId

--- a/bashevoy_osnovi_pandas6.ipynb
+++ b/bashevoy_osnovi_pandas6.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -39,7 +39,7 @@
     "data_path = os.path.join(path, 'ml-latest-small')\n",
     "data = pd.read_csv(os.path.join(data_path, 'ratings.csv'))\n",
     "data_movies = pd.read_csv(os.path.join(data_path, 'movies.csv'))\n",
-    "data_all = data.merge(data_movies )\n",
+    "data_all = data.merge(data_movies, on='movieId', how='right')\n",
     "data_all[['movieId', 'rating', 'title']].head()\n",
     "# data_all[].unique().head()\n",
     "data_only_5 = data_all[data_all['rating'] == 5.0]\n",
