--- a/Python_8_pandas.ipynb
+++ b/Python_8_pandas.ipynb
@@ -1429,7 +1429,7 @@
     " типам (см. файл с кодом занятия). Необходимо сформировать две таблицы:\n",
     "\n",
     "1. таблицу с тремя типами выручки для каждого client_id без указания адреса клиента\n",
-    "1. аналогичную таблицу по типам выручки с указанием адреса клиента\n",
+    "1. аналогичную таблицу по типам выручки с указанием адреса клиента  \n",
     "Обратите внимание, что в процессе объединения таблиц данные не должны теряться."
    ],
    "metadata": {
@@ -1438,25 +1438,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "outputs": [
     {
      "data": {
-      "text/plain": "           rzd_revenue  auto_revenue  air_revenue\nclient_id                                        \n111               1093           0.0          0.0\n112               2810           0.0          0.0\n113              10283       57483.0          0.0\n114               5774          83.0          0.0\n115                981         912.0         81.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>rzd_revenue</th>\n      <th>auto_revenue</th>\n      <th>air_revenue</th>\n    </tr>\n    <tr>\n      <th>client_id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>111</th>\n      <td>1093</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>112</th>\n      <td>2810</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>113</th>\n      <td>10283</td>\n      <td>57483.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>114</th>\n      <td>5774</td>\n      <td>83.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>115</th>\n      <td>981</td>\n      <td>912.0</td>\n      <td>81.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "           rzd_revenue  auto_revenue  air_revenue\nclient_id                                        \n111             1093.0           0.0          0.0\n112             2810.0           0.0          0.0\n113            10283.0       57483.0          0.0\n114             5774.0          83.0          0.0\n115              981.0         912.0         81.0\n116                0.0        4834.0          4.0\n117                0.0          98.0         13.0\n118                0.0           0.0        173.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>rzd_revenue</th>\n      <th>auto_revenue</th>\n      <th>air_revenue</th>\n    </tr>\n    <tr>\n      <th>client_id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>111</th>\n      <td>1093.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>112</th>\n      <td>2810.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>113</th>\n      <td>10283.0</td>\n      <td>57483.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>114</th>\n      <td>5774.0</td>\n      <td>83.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>115</th>\n      <td>981.0</td>\n      <td>912.0</td>\n      <td>81.0</td>\n    </tr>\n    <tr>\n      <th>116</th>\n      <td>0.0</td>\n      <td>4834.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>117</th>\n      <td>0.0</td>\n      <td>98.0</td>\n      <td>13.0</td>\n    </tr>\n    <tr>\n      <th>118</th>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>173.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 71
+     "execution_count": 75
     }
    ],
    "source": [
     "# all_perevozkis: pd.DataFrame = pd.concat([rzd.set_index('client_id'), auto.set_index('client_id'), air.set_index('client_id')],\n",
     "                           # ignore_index=False, sort=False)\n",
-    "all_perevozkis: pd.DataFrame = rzd.set_index('client_id').join(auto.set_index('client_id'))\\\n",
-    "    .join(air.set_index('client_id'))\n",
+    "all_perevozkis: pd.DataFrame = rzd.set_index('client_id').join(auto.set_index('client_id'), how='outer')\\\n",
+    "    .join(air.set_index('client_id'), how='outer')\n",
     "all_perevozkis.fillna(0, inplace=True)\n",
-    "all_perevozkis.head(15)"
+    "all_perevozkis.head(8)"
    ],
    "metadata": {
     "collapsed": false,
