--- a/dz_1 основы описательной статистики, виды распределений.ipynb
+++ b/dz_1 основы описательной статистики, виды распределений.ipynb
@@ -133,9 +133,11 @@
     }
    },
    "source": [
-    "df.head()\n"
+    "df.head()\n",
+    "\n",
+    "\n"
    ],
-   "execution_count": 13,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -144,7 +146,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 13
+     "execution_count": 6
     }
    ]
   },
